--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
 
+  # Shared preferences for settings
+  shared_preferences: ^2.3.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
